--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,17 +3,16 @@
 @import "../../_mixin";
 
 .home_wrapper {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  height: 100vh; // 画面の高さいっぱいにする
+  flex-direction: column-reverse;
   background-color: $main-color;
 
   @include mq(sm) {
-    display: flex;
-    width: 100%;
-    height: 100%;
+    // 480px以上の場合のスタイル
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: $main-color;
 
     .tab_wrapper {
       width: 10%;
