--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -10,13 +10,20 @@
     margin: 2% 0;
   }
 
-  
   @include mq(sm) {
     display: grid;
-    grid-template-columns: repeat(3, minmax(200px, 1fr)); /* 2列の定義。各アイテムは最小で200pxの幅を持つ */
-    grid-template-rows: repeat(2, auto); /* 4行の定義。各行は内容に合わせて自動的に高さが設定される */
-    gap: 16px; /* グリッドのアイテム間の間隔を指定 */
+    gap: 10px;
 
+    transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+
+    // hoverした時のエフェクト
+    &:hover {
+      transform: translateY(-10px); // カードを少し上に動かす
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); // 影をつけることで浮き上がって見えるようにする
+    }
+
+    // 480px以上 (タブレットサイズ) で2列
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
     .media {
       height: 70%;
     }
@@ -38,7 +45,41 @@
     }
   }
 
+  @include mq(xl) {
+    display: grid;
+    gap: 10px;
 
+    transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+
+    // hoverした時のエフェクト
+    &:hover {
+      transform: translateY(-10px); // カードを少し上に動かす
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); // 影をつけることで浮き上がって見えるようにする
+    }
+
+    // 1000px以上 (PCサイズ) で3列
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
+
+    .media {
+      height: 70%;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .expanded {
+      // position: fixed;
+      width: 80vw;
+      height: 90vh;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 1000;
+      // background-color: rgba(0, 0, 0, 0.7);  // 背景を半透明に
+    }
+  }
 
   .project_list {
     font-weight: 700;
